examples/test/testpolicy6415.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6415
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key37: value44
      key14: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value28
          key29: value36
      podSelector:
        matchLabels:
          key35: value0
          key34: value48
